--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "start-storybook -p 6006",
     "build": "build-storybook",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=923cd1974c04"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,9 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/theming": "^6.5.12",
-    "babel-loader": "^8.2.5"
-  }
+    "babel-loader": "^8.2.5",
+    "chromatic": "^6.11.2"
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "my-story-book@0.1.0"
 }
