--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
-  "name": "my-story-book",
+  "name": "as-my-story-book-components",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
+  "typings": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "homepage": "https://ahunki.com",
+  "repository": {
+    "url": "https://github.com/nk0dmk/sb-components",
+    "type": "git"
+  },
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "typescript": ">=4.8.4"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,10 +38,12 @@
   },
   "scripts": {
     "start": "start-storybook -p 6006",
-    "build": "build-storybook",
+    "build": "yarn clean && tsc && yarn copy-files",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=923cd1974c04"
+    "chromatic": "npx chromatic --project-token=923cd1974c04",
+    "clean": "rimraf dist/",
+    "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
   "eslintConfig": {
     "extends": [
@@ -53,8 +76,20 @@
     "@storybook/testing-library": "^0.0.13",
     "@storybook/theming": "^6.5.12",
     "babel-loader": "^8.2.5",
-    "chromatic": "^6.11.2"
+    "chromatic": "^6.11.2",
+    "copyfiles": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "semantic-release": "^19.0.5"
   },
+  "plugins": [
+    "@semantic-realease/commit-analizer",
+    "@semantic-realease/release-notes-generator",
+    "@semantic-realease/changelog",
+    "@semantic-realease/github",
+    "@semantic-realease/npm",
+    "@semantic-realease/git"
+  ],
   "readme": "ERROR: No README data found!",
   "_id": "my-story-book@0.1.0"
+
 }
