--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "type": "git"
   },
   "peerDependencies": {
-    "react": ">=18.2.0",
-    "typescript": ">=4.8.4"
+    "react": ">=18.2.0"
   },
   "release": {
     "branches": [
