--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build": "yarn clean && tsc && yarn copy-files",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=923cd1974c04",
+    "chromatic": "CHROMATIC_TOKEN=$(grep CHROMATIC_TOKEN .env | cut -d '=' -f2) && npx chromatic --project-token=$CHROMATIC_TOKEN",
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
@@ -77,6 +77,7 @@
     "babel-loader": "^8.2.5",
     "chromatic": "^6.11.2",
     "copyfiles": "^2.4.1",
+    "dotenv": "^16.0.3",
     "rimraf": "^3.0.2",
     "semantic-release": "^19.0.5"
   },
@@ -90,5 +91,4 @@
   ],
   "readme": "ERROR: No README data found!",
   "_id": "my-story-book@0.1.0"
-
 }
